Added list and image

--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
 <body>
     <h1>Daniel's Homepage</h1>
 
+    <img src="raptor.jpg" alt="Yamaha Raptor" width="300">
+
     <p>My name is Daniel. I enjoy coding, technology, and anything outdoors.</p>
 
     <p>Check out my Github <a href="https://github.com/DanielCater">here</a>.</p>
 
     <h2>My Interests</h2>
     <ul>
-    <li>ATV Riding</li>
-    <li>Hiking</li>
-    <li>Programming</li>
-    <li>Traveling</li>
+        <li>ATV Riding</li>
+        <li>Hiking</li>
+        <li>Programming</li>
+        <li>Traveling</li>
+    </ul>
+
+    <h2>Contact Me</h2>
+    <ul>
+        <li>Email: d29cate@siena.edu</li>
+        <li>Discord: dan.2121</li>
     </ul>
 </body>
 </html>
