Added link to css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Daniel's Homepage</title>
+
+    <link rel="stylesheet" href="css/simple.css">
 </head>
 <body>
     <h1>Daniel's Homepage</h1>
 
-    <img src="raptor.jpg" alt="Yamaha Raptor" width="300">
+    <img src="images/raptor.jpg" alt="Yamaha Raptor" width="300">
 
     <p>My name is Daniel. I enjoy coding, technology, and anything outdoors.</p>
 
