Cleaned up main page and added navigation between pages

--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
+    <nav>
+        <a href="index.html" aria-current="page">Home</a>
+        <a href="about.html">About</a>
+    </nav>
     <meta charset="UTF-8">
     <title>Daniel's Homepage</title>
 
     <link rel="stylesheet" href="css/simple.css">
-</head>
-<body>
+</header>
+<main>
     <h1>Daniel's Homepage</h1>
 
     <img src="images/raptor.jpg" alt="Yamaha Raptor" width="300">
 
-    <p>My name is Daniel. I enjoy coding, technology, and anything outdoors.</p>
+    <p>Welcome to my website! Here you can find out more about me and my hobbies</p>
 
     <p>Check out my Github <a href="https://github.com/DanielCater">here</a>.</p>
-
-    <h2>My Interests</h2>
-    <ul>
-        <li>ATV Riding</li>
-        <li>Hiking</li>
-        <li>Programming</li>
-        <li>Traveling</li>
-    </ul>
 
     <h2>Contact Me</h2>
     <ul>
         <li>Email: d29cate@siena.edu</li>
         <li>Discord: dan.2121</li>
     </ul>
-</body>
+
+    <p class="notice">
+        <strong>Want to learn how to make a website like this?</strong><br> Check out the free web book 
+        <a href="https://htmlforpeople.com/">HTML for People</a>. It's made for everyone and teaches you 
+        how to make a webpage in a friendly, approachable way.
+    </p>
+</main>
+
+<footer>
+  <p>Made by Daniel Cater</p>
+</footer>
 </html>
