--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <header>
     <nav>
         <a href="index.html">Home</a>
+        <a href="Blog/index.html">Blog</a>
         <a href="about.html" aria-current="page">About</a>
     </nav>
     <meta charset="UTF-8">
