--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <header>
     <nav>
         <a href="index.html" aria-current="page">Home</a>
+        <a href="Blog/index.html">Blog</a>
         <a href="about.html">About</a>
     </nav>
     <meta charset="UTF-8">
