Added navigation to resume

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <a href="index.html">Home</a>
         <a href="Blog/index.html">Blog</a>
         <a href="about.html" aria-current="page">About</a>
+        <a href="resume.html">Resume</a>
     </nav>
     <meta charset="UTF-8">
     <title>About Daniel</title>
