--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <a href="index.html" aria-current="page">Home</a>
         <a href="Blog/index.html">Blog</a>
         <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
     </nav>
     <meta charset="UTF-8">
     <title>Daniel's Homepage</title>
