Added navigation to fun page

--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
         <a href="Blog/index.html">Blog</a>
         <a href="about.html">About</a>
         <a href="resume.html" aria-current="page">Resume</a>
+        <a href="fun.html">Fun</a>
     </nav>
     <meta charset="UTF-8">
     <title>Daniel's Resume</title>
