--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <a href="Blog/index.html">Blog</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
+        <a href="fun.html">Fun</a>
     </nav>
     <meta charset="UTF-8">
     <title>Daniel's Homepage</title>
