--- a/about.html
+++ b/about.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        * {
+        opacity: 0;
+        animation: fadeIn 0.5s ease forwards;
+        }
+
+        @keyframes fadeIn {
+        to {
+            opacity: 1;
+        }
+        }
+    </style>
+
 <header>
     <nav>
         <a href="index.html">Home</a>
@@ -11,7 +24,7 @@
     <meta charset="UTF-8">
     <title>About Daniel</title>
 
-    <link rel="stylesheet" href="css/simple.css">
+    <link rel="stylesheet" href="css/common_style.css">
 </header>
 <main>
     <h1>About Daniel</h1>
