--- a/fun.html
+++ b/fun.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        * {
+        opacity: 0;
+        animation: fadeIn 0.5s ease forwards;
+        }
+
+        @keyframes fadeIn {
+        to {
+            opacity: 1;
+        }
+    }
+</style>
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -11,7 +23,7 @@
         <meta charset="UTF-8">
         <title>Fun</title>
 
-        <link rel="stylesheet" href="css/simple.css">
+        <link rel="stylesheet" href="css/common_style.css">
     </header>
     <main>
         <section>
