--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    /* Fade-in animation for page load */
     <style>
+        /* Fade-in animation for all elements */
         * {
         opacity: 0;
         animation: fadeIn 0.5s ease forwards;
@@ -13,6 +13,7 @@
         }
         }
 
+        /* Color shifting link style */
         .color-shift {
             display: inline-block;
             padding: 7px 20px;
