--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
             background: linear-gradient(45deg, #48dbfb, #1dd1a1);
             }
     </style>
+<head>
+    <meta charset="UTF-8">
+    <title>Daniel's Homepage</title>
 
+    <link rel="stylesheet" href="css/common_style.css">
+</head>
 <header>
     <nav>
         <a href="index.html" aria-current="page">Home</a>
@@ -36,10 +41,6 @@
         <a href="resume.html">Resume</a>
         <a href="fun.html">Fun</a>
     </nav>
-    <meta charset="UTF-8">
-    <title>Daniel's Homepage</title>
-
-    <link rel="stylesheet" href="css/common_style.css">
 </header>
 <main>
     <h1>Daniel's Homepage</h1>
