--- a/about.html
+++ b/about.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        * {
-        opacity: 0;
-        animation: fadeIn 0.5s ease forwards;
-        }
+    <head>
+        <style>
+            * {
+            opacity: 0;
+            animation: fadeIn 0.5s ease forwards;
+            }
 
-        @keyframes fadeIn {
-        to {
-            opacity: 1;
-        }
-        }
-    </style>
+            @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
+            }
+        </style>
+
+        <meta charset="UTF-8">
+        <title>About Daniel</title>
+
+        <link rel="stylesheet" href="css/common_style.css">
+
+    </head>
 
 <header>
     <nav>
@@ -21,11 +29,8 @@
         <a href="resume.html">Resume</a>
         <a href="fun.html">Fun</a>
     </nav>
-    <meta charset="UTF-8">
-    <title>About Daniel</title>
-
-    <link rel="stylesheet" href="css/common_style.css">
 </header>
+
 <main>
     <h1>About Daniel</h1>
 
