--- a/resume.html
+++ b/resume.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        * {
-        opacity: 0;
-        animation: fadeIn 0.5s ease forwards;
-        }
+    <head>
+        <style>
+            * {
+            opacity: 0;
+            animation: fadeIn 0.5s ease forwards;
+            }
 
-        @keyframes fadeIn {
-        to {
-            opacity: 1;
-        }
-        }
-    </style>
+            @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
+            }
+        </style>
+        <meta charset="UTF-8">
+        <title>Daniel's Resume</title>
+
+        <link rel="stylesheet" href="css/common_style.css">
+    </head>
+    
 <header>
     <nav>
         <a href="index.html">Home</a>
@@ -20,13 +27,11 @@
         <a href="resume.html" aria-current="page">Resume</a>
         <a href="fun.html">Fun</a>
     </nav>
-    <meta charset="UTF-8">
-    <title>Daniel's Resume</title>
-
-    <link rel="stylesheet" href="css/common_style.css">
+    
     <h1>Daniel Cater</h1>
     <p><em>Siena Undergraduate Computer Science Student</em></p>
 </header>
+
 <main>
     <section>
         <h2>Skills</h2>
