--- a/fun.html
+++ b/fun.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        * {
-        opacity: 0;
-        animation: fadeIn 0.5s ease forwards;
-        }
+    <head>
+        <style>
+            * {
+            opacity: 0;
+            animation: fadeIn 0.5s ease forwards;
+            }
 
-        @keyframes fadeIn {
-        to {
-            opacity: 1;
+            @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
         }
-    }
-</style>
+        </style>
+
+        <meta charset="UTF-8">
+        <title>Fun</title>
+
+        <link rel="stylesheet" href="css/common_style.css">
+    </head>
+
+
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -20,11 +29,8 @@
             <a href="resume.html">Resume</a>
             <a href="fun.html" aria-current="page">Fun</a>
         </nav>
-        <meta charset="UTF-8">
-        <title>Fun</title>
-
-        <link rel="stylesheet" href="css/common_style.css">
     </header>
+
     <main>
         <section>
             <h2>Jokes</h2>
