--- a/fun.html
+++ b/fun.html
@@ -123,11 +123,11 @@
 
         <section>
             <h2>Lofi Mixes</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/sF80I-TQiW0?si=QmAOABSzGBmZwJLS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sF80I-TQiW0?si=QmAOABSzGBmZwJLS" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <hr>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/mG1aeD7odqk?si=JcsBTTuKnOrTPVk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mG1aeD7odqk?si=JcsBTTuKnOrTPVk0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <hr>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TSA6GD9MioM?si=Q7vaWGsE7IB9wgGr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TSA6GD9MioM?si=Q7vaWGsE7IB9wgGr" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
         </section>
     </main>
