Added fade in animation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <main>
     <h1>Daniel's Homepage</h1>
 
-    <img src="images/raptor.jpg" alt="Yamaha Raptor" width="300">
+    <img src="images/raptor.jpg" alt="Yamaha Raptor" width="300" class="fade-in-bottom">
 
     <p>Welcome to my website! My name is Daniel. I am a Siena University Computer Science student learning software development. 
        Here you can find out more about me and my hobbies</p>
