Changes nav width

--- a/navbar.html
+++ b/navbar.html
@@ -46,8 +46,8 @@
                 width: max-content;
             }
             nav{
-                width: max-content;
-                
+                width: max-auto;
+
             }
         }
 
