changed nav width

--- a/navbar.html
+++ b/navbar.html
@@ -46,7 +46,7 @@
                 width: max-content;
             }
             nav{
-                width: max-auto;
+                width: auto;
 
             }
         }
