Added navbar with flexbox

--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
             display: flex;
             background: #333;
         }
-        .flex-item{
+        nav li{
             display: flex;
             flex-direction: row;
 
