Added more javascript practice

--- a/form.html
+++ b/form.html
@@ -32,6 +32,9 @@
   <input id="textbox" type="text">
   <div id="output"></div>
 
+  <button id="greetingBtn">Press me</button>
+  <div id="greeting"></div>
+
   <script src="myform.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
