--- a/guessinggame.html
+++ b/guessinggame.html
@@ -1,57 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Guessing Game</title>
     <script src="game.js" defer></script>
-    <style>
-        html{
-            font-family: sans-serif;
-        }
-
-        body{
-            width: 50%;
-            max-width: 800px;
-            min-width: 480px;
-            margin: 0 auto;
-        }
-
-        .form input[type="number"] {
-            width: 200px;
-        }
-
-        .lastResult {
-            color: white;
-            padding: 3px;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>Number Guessing Game</h1>
+    <section class="container my-5">
+        <h1 class="mb-3">Number Guessing Game</h1>
 
-    <p>
-      We have selected a random number between 1 and 100. See if you can guess
-      it in 10 turns or fewer. We'll tell you if your guess was too high or too
-      low.
-    </p>
+        <p class="text-muted">
+            We have selected a random number between 1 and 100. See if you can guess
+            it in 10 turns or fewer. We'll tell you if your guess was too high or too
+            low.
+        </p>
 
-    <div class="form">
-        <label for="guessField">Enter a guess: </label>
-        <input 
-            type="number"
-            min="1"
-            max="100"
-            required
-            id="guessField"
-            class="guessField" />
-        <input type="submit" value="Submit guess" class="guessSubmit" />
-    </div>
+        <div class="mb-4">
+            <label for="guessField" class="form-label">Enter a guess: </label>
+            <div class="input-group">
+                <input type="number" min="1" max="100" required id="guessField" class="form-control guessField" />
+                <button type="button" class="btn btn-primary guessSubmit">Submit guess</button>
+            </div>
+        </div>
 
-    <div class="resultParas">
-      <p class="guesses"></p>
-      <p class="lastResult"></p>
-      <p class="lowOrHi"></p>
-    </div>
+        <div class="resultParas mt-4">
+            <p class="guesses fw-bold"></p>
+            <p class="lastResult"></p>
+            <p class="lowOrHi text-warning fw-semibold"></p>
+        </div>
+    </section>
 </body>
+
 </html>
