--- a/fun.html
+++ b/fun.html
@@ -1,138 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <style>
-            * {
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fun</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <style>
+        * {
             opacity: 0;
             animation: fadeIn 0.5s ease forwards;
-            }
+        }
 
-            @keyframes fadeIn {
+        @keyframes fadeIn {
             to {
                 opacity: 1;
             }
         }
-        </style>
 
-        <meta charset="UTF-8">
-        <title>Fun</title>
+        body {
+            background-color: #f8f9fa;
+        }
 
-        <link rel="stylesheet" href="css/common_style.css">
-    </head>
+        .navbar-brand {
+            font-weight: 700;
+        }
 
+        .section-card {
+            border: none;
+            border-radius: 1rem;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.07);
+        }
 
-    <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="Blog/index.html">Blog</a>
-            <a href="about.html">About</a>
-            <a href="resume.html">Resume</a>
-            <a href="fun.html" aria-current="page">Fun</a>
-        </nav>
-    </header>
+        .section-title {
+            font-size: 0.75rem;
+            font-weight: 700;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            color: #6c757d;
+            margin-bottom: 1.25rem;
+        }
 
-    <main>
-        <section>
-            <h2>Jokes</h2>
+        /* Joke accordion styling */
+        .joke-item {
+            border: none;
+            border-bottom: 1px solid #e9ecef;
+        }
 
-            <details>
-                <summary>Why don't scientists trust atoms?</summary>
+        .joke-item:last-child {
+            border-bottom: none;
+        }
 
-                <p>
-                    Because they make up everything!
-                </p>
-            </details>
+        .joke-btn {
+            font-weight: 500;
+            color: #212529;
+            background-color: transparent;
+            padding: 1rem 0;
+        }
 
-            <details>
-                <summary>Why did the scarecrow win an award?</summary>
+        .joke-btn:not(.collapsed) {
+            color: #667eea;
+            background-color: transparent;
+            box-shadow: none;
+        }
 
-                <p>
-                    Because he was outstanding in his field!
-                </p>
-            </details>
+        .joke-btn:focus {
+            box-shadow: none;
+        }
 
-            <details>
-                <summary>Why did the bicycle fall over?</summary>
+        .joke-btn::after {
+            filter: none;
+        }
 
-                <p>
-                    Because it was two-tired!
-                </p>
-            </details>
+        /* D&D table */
+        .dnd-table thead {
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            color: white;
+        }
 
-        </section>
+        .dnd-table tbody tr:hover {
+            background-color: #f0f0ff;
+        }
 
-        <section>
-            <h2>D&D stuff</h2>
+        .roll-badge {
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            color: white;
+            border-radius: 2rem;
+            padding: 4px 14px;
+            font-weight: 700;
+            font-size: 0.9rem;
+        }
 
-            <p>
-                Dungeons & Dragons (D&D) is a fun tabletop game where you create characters and go on epic adventures with friends. 
-                Guided by a Dungeon Master (DM), you'll roll dice to see what happens next. It's all about creativity, teamwork, 
-                and having a blast as you tackle quests, fight monsters, and find awesome treasures.
-            </p>
+        /* Responsive video wrapper */
+        .video-wrapper {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            border-radius: 0.75rem;
+        }
 
-            <h3>Random encounter table</h3>
+        .video-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
 
-            <p>
-                This is a table you can use to randomly decide what enemy or creature the players are going to encounter. Just roll a d8.
-            </p>
+        footer {
+            background-color: #212529;
+            color: #adb5bd;
+        }
+    </style>
+</head>
 
-            <table>
-                    <thead>
-                        <tr>
-                        <th>Roll (1d8)</th>
-                        <th>Encounter</th>
-                        </tr>
-                    </thead>
+<body>
 
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Band of Goblins</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Wandering Merchant</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Group of Bandits</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Pack of Wolves</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Travelling Minstrels</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>Lost Child</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>Hidden Trap</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>Old Hermit</td>
-                        </tr>
-                    </tbody>
-                </table>
-        </section>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top shadow-sm">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Daniel</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNav">
+                <ul class="navbar-nav ms-auto gap-1">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Blog/index.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="fun.html">Fun</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-        <section>
-            <h2>Lofi Mixes</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/sF80I-TQiW0?si=QmAOABSzGBmZwJLS" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <hr>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/mG1aeD7odqk?si=JcsBTTuKnOrTPVk0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <hr>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TSA6GD9MioM?si=Q7vaWGsE7IB9wgGr" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            
-        </section>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-9">
+
+                <!-- Jokes -->
+                <div class="card section-card p-4 mb-4">
+                    <p class="section-title">Jokes</p>
+
+                    <div class="accordion accordion-flush" id="jokesAccordion">
+
+                        <div class="accordion-item joke-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button joke-btn collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#joke1">
+                                    Why don't scientists trust atoms?
+                                </button>
+                            </h2>
+                            <div id="joke1" class="accordion-collapse collapse" data-bs-parent="#jokesAccordion">
+                                <div class="accordion-body text-muted pt-0">
+                                    Because they make up everything!
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item joke-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button joke-btn collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#joke2">
+                                    Why did the scarecrow win an award?
+                                </button>
+                            </h2>
+                            <div id="joke2" class="accordion-collapse collapse" data-bs-parent="#jokesAccordion">
+                                <div class="accordion-body text-muted pt-0">
+                                    Because he was outstanding in his field!
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item joke-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button joke-btn collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#joke3">
+                                    Why did the bicycle fall over?
+                                </button>
+                            </h2>
+                            <div id="joke3" class="accordion-collapse collapse" data-bs-parent="#jokesAccordion">
+                                <div class="accordion-body text-muted pt-0">
+                                    Because it was two-tired!
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- D&D -->
+                <div class="card section-card p-4 mb-4">
+                    <p class="section-title">D&D Stuff</p>
+
+                    <p class="text-muted">
+                        Dungeons & Dragons (D&D) is a fun tabletop game where you create characters and go on epic
+                        adventures with friends. Guided by a Dungeon Master (DM), you'll roll dice to see what happens
+                        next. It's all about creativity, teamwork, and having a blast as you tackle quests, fight
+                        monsters, and find awesome treasures.
+                    </p>
+
+                    <h3 class="h6 fw-semibold mt-3 mb-1">Random Encounter Table</h3>
+                    <p class="text-muted small mb-3">Roll a d8 to find out what your players encounter next.</p>
+
+                    <div class="table-responsive">
+                        <table class="table dnd-table table-bordered align-middle mb-0">
+                            <thead>
+                                <tr>
+                                    <th style="width: 120px;">Roll (1d8)</th>
+                                    <th>Encounter</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><span class="roll-badge">1</span></td>
+                                    <td>Band of Goblins</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="roll-badge">2</span></td>
+                                    <td>Wandering Merchant</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="roll-badge">3</span></td>
+                                    <td>Group of Bandits</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="roll-badge">4</span></td>
+                                    <td>Pack of Wolves</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="roll-badge">5</span></td>
+                                    <td>Travelling Minstrels</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="roll-badge">6</span></td>
+                                    <td>Lost Child</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="roll-badge">7</span></td>
+                                    <td>Hidden Trap</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="roll-badge">8</span></td>
+                                    <td>Old Hermit</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <!-- Lofi Mixes -->
+                <div class="card section-card p-4 mb-4">
+                    <p class="section-title">Lofi Mixes</p>
+
+                    <div class="row g-4">
+                        <div class="col-md-4">
+                            <div class="video-wrapper shadow-sm">
+                                <iframe src="https://www.youtube.com/embed/sF80I-TQiW0?si=QmAOABSzGBmZwJLS"
+                                    title="Lofi Mix 1"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="video-wrapper shadow-sm">
+                                <iframe src="https://www.youtube.com/embed/mG1aeD7odqk?si=JcsBTTuKnOrTPVk0"
+                                    title="Lofi Mix 2"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="video-wrapper shadow-sm">
+                                <iframe src="https://www.youtube.com/embed/TSA6GD9MioM?si=Q7vaWGsE7IB9wgGr"
+                                    title="Lofi Mix 3"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </main>
 
-    <footer>
-        <p>Made by Daniel Cater</p>
-    </footer>
+</body>
+
 </html>
